--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -342,6 +342,7 @@
                                     str += ("<a style='max-width : 100%; padding : 1px; margin : 1px'  href=" + data['notifs'][i]['url'] + ">"
                                             + "<img src=" + data['notifs'][i]['pic'] + " height=20px width=20px/> <span class='notifications_normal'>"
                                             + data['notifs'][i]['text'] + "</span></a></li>");
+                                str += '<li class="divider"></li>'
                             }
             
                                 if(str === '')
