same book creation check:

--- a/linkbook/links/templates/links/new_book.html
+++ b/linkbook/links/templates/links/new_book.html
@@ -12,6 +12,7 @@
             <h4 class="center">Create your own book</h4>
                 <form method="post" action="{% url 'create_book' %}" role="form">
                 {% csrf_token %}
+                    <div>{{error}}</div>
                     <div class="input-field">
                         <i class="material-icons prefix">title</i>
                         <input class="input" type="text" id="TITLE" name="TITLE" maxlength="30" data-length="30">
