--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -51,9 +51,8 @@
                     <div class="row"  style="padding: 0px; margin: 0px">
                         <!-- user avatar -->
                         <img class="responsive-img circle"  height = "40px" width="40px" src="{{link.user.profile.pic}}" />
-                        &nbsp; &nbsp;
                         <span class="title blue-grey-text ">{{ link.user }}<br/>
-                        <sup>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ time }}</sup></span>
+                        <sup>{{ time }}</sup></span>
                         <br><br>
                     </div>
                     <div class="row" style="margin: 0px;">
